Fix: 재고 확인 시 store id 직접 입력하도록 수정